--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+
     <title>Movie App</title>
   </head>
   <body>
